--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>News and Commentary</title>
     <style>
-      body { background-color: #F2F6D0 }
+      body { background-color: wheat }
       #wrapper {
         width: 960px;
         margin-left: auto;
@@ -34,12 +34,17 @@
         height: 200px;
         font-size: 18px;
       }
+      button {
+        border-style: outset
+      }
     </style>
   </head>
   <body>
     <div id="wrapper">
       <h1>News and Commentary</h1>
       <h2><i>All the news that is fit to blog....</i></h2>
+      <h2><i>Click on a Headline to comment on the article.</i></h2>
+
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
