--- a/public/index.html
+++ b/public/index.html
@@ -3,48 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>News and Commentary</title>
-    <style>
-      body { background-color: wheat }
-      #wrapper {
-        width: 960px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 5%;
-      }
-      #articles {
-        display: inline-block;
-        overflow: auto;
-        width: 60%;
-        height: 700px;
-      }
-      #notes {
-        float: right;
-        width: 30%;
-      }
-      textarea, input {
-        display: block;
-        width: 100%;
-        background-color: #FCF5C7;
-      }
-      input {
-        height: 36px;
-        font-size: 24px;
-      }
-      textarea {
-        height: 200px;
-        font-size: 18px;
-      }
-      button {
-        border-style: outset
-      }
-    </style>
+     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   </head>
   <body>
     <div id="wrapper">
       <h1>News and Commentary</h1>
-      <h2><i>All the news that is fit to blog....</i></h2>
-      <h2><i>Click on a Headline to comment on the article.</i></h2>
-
+      <h2><i>All the news that is fit to read....</i></h2>
+      <br />
+      <button id='get-some-news'>Get the latest news</button>
+      <br />
+      <h2><i>Click on a headline to read and comment on an article.</i></h2>
+      <br />
+      <br />
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
