Some style changes

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>News and Commentary</title>
+    <title>The Commentator</title>
      <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   </head>
   <body>
     <div id="wrapper">
-      <h1>News and Commentary</h1>
-      <h2><i>All the news that is fit to read....</i></h2>
+      <h1>The Commentator</h1><br />
+      <h2>News and Opinion</h2>
+      <h3><i>All the news that is fit to read....</i></h3>
       <br />
-      <button id='get-some-news'>Get the latest news</button>
+      <button id='get-the-news'>Get the latest news</button>
+      <br />
       <br />
       <h2><i>Click on a headline to read and comment on an article.</i></h2>
-      <br />
-      <br />
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
