commented out click text until I have time to follow-up on it

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <button id='get-the-news'>Get the latest news</button>
       <br />
       <br />
-      <h2><i>Click on a headline to read and comment on an article.</i></h2>
+   <!--   <h2><i>Click on a headline to read and comment on an article.</i></h2> -->
       <div id="articles"></div>
       <div id="notes"></div>
     </div> 
